--- a/src/assets/application.scss
+++ b/src/assets/application.scss
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@import "app.scss";
+@import "cards.scss";
+@import "map.scss";
