--- a/src/assets/application.scss
+++ b/src/assets/application.scss
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,6 +13,5 @@ code {
     monospace;
 }
 
-@import "app.scss";
 @import "cards.scss";
 @import "map.scss";
